// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a message 1`] = `
<button
  className="ui instagram button"
  onClick={[Function]}
>
  test
</button>
`;

exports[`renders a message 2`] = `
<button
  className="ui red button"
  onClick={[Function]}
>
  test
</button>
`;
